tests/paczka1/fuzzy1/65212935.err
Error in line 2: u4b S501 24,1
Error in line 9: hMO S501 6,6
Error in line 16: GbJZDkqrm6 A405 259,7
Error in line 17: GbJZDkqrm6 S922 18,1
